--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#212121" />
+    <meta name="apple-mobile-web-app-title" content="Danilo Ribeiro">
+	
+	  <link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico">
+	  <link rel="mask-icon" href="/favicon.ico" color="grey">
     <title>Danilo Ribeiro</title>
   </head>
   <body>
