--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	  <link rel="mask-icon" href="/favicon.ico" color="grey">
     <title>Danilo Ribeiro</title>
   </head>
-  <body>
+  <body class="bg-white dark:bg-zinc-800">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
