added meta tags

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+
+    <meta property="og:title" content="Danilo Ribeiro - Front-End Developer">
+    <meta name="twitter:title" content="Danilo Ribeiro - Front-End Developer">
+    <meta property="og:description" content="Front-End Developer - Vue.js + React + Next.js + TypeScript + UI/UX">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/public/profile.png" >
+    <meta name="twitter:image" content="/public/profile.png" >
+    <meta name="twitter:card" content="summary">
+    <meta name="author" content="Danilo Ribeiro">
+    <meta name="keywords" content="frontend,front-end,development,developer,vue,vue.js,react,javascript,typescript,ui,ux,design">
 	
 	  <link rel="mask-icon" href="/favicon.ico" color="grey">
     <title>Danilo Ribeiro</title>
