--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <meta name="twitter:title" content="Danilo Ribeiro - Front-End Developer">
     <meta property="og:description" content="Front-End Developer - Vue.js + React + Next.js + TypeScript + UI/UX">
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/profile.png" >
-    <meta name="twitter:image" content="/public/profile.png" >
+    <meta property="og:image" content="/profile.png" >
+    <meta name="twitter:image" content="/profile.png" >
     <meta name="twitter:card" content="summary">
     <meta name="author" content="Danilo Ribeiro">
     <meta name="keywords" content="frontend,front-end,development,developer,vue,vue.js,react,javascript,typescript,ui,ux,design">
