--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 
-    <meta property="og:title" content="Danilo Ribeiro - Front-End Developer">
+    <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Danilo Ribeiro - Front-End Developer">
     <meta name="twitter:title" content="Danilo Ribeiro - Front-End Developer">
-    <meta property="og:description" content="Front-End Developer - Vue.js + React + Next.js + TypeScript + UI/UX">
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/profile.png" >
-    <meta name="twitter:image" content="/profile.png" >
+    <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Front-End Developer - Vue.js + React + Next.js + TypeScript + UI/UX">
+    <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="/image.png" >
+    <meta name="twitter:image" content="/image.png" >
     <meta name="twitter:card" content="summary">
     <meta name="author" content="Danilo Ribeiro">
     <meta name="keywords" content="frontend,front-end,development,developer,vue,vue.js,react,javascript,typescript,ui,ux,design">
