--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <meta name="twitter:title" content="Danilo Ribeiro - Front-End Developer">
     <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Front-End Developer - Vue.js + React + Next.js + TypeScript + UI/UX">
     <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
-    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="/image.png" >
-    <meta name="twitter:image" content="/image.png" >
+    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://avatars.githubusercontent.com/u/68981163?" >
+    <meta prefix="og: http://ogp.me/ns#" property="og:image:width" content="460" >
+    <meta prefix="og: http://ogp.me/ns#" property="og:image:height" content="460" >
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/68981163?" >
     <meta name="twitter:card" content="summary">
     <meta name="author" content="Danilo Ribeiro">
     <meta name="keywords" content="frontend,front-end,development,developer,vue,vue.js,react,javascript,typescript,ui,ux,design">
