--- a/index.html
+++ b/index.html
@@ -1,46 +1,169 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="preconnect" href="https://avatars.githubusercontent.com/u/68981163?" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="apple-mobile-web-app-title" content="Danilo Ribeiro">
-    
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <link
+      rel="icon"
+      href="/favicon.ico"
+    />
+    <link
+      rel="preconnect"
+      href="https://avatars.githubusercontent.com/u/68981163?"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="Danilo Ribeiro"
+    />
 
-    <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Danilo Ribeiro - Front-End Developer">
-    <meta name="twitter:title" content="Danilo Ribeiro - Front-End Developer">
-    <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Front-End Developer - Vue.js + React + Next.js + TypeScript + UI/UX">
-    <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
-    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://avatars.githubusercontent.com/u/68981163?" >
-    <meta prefix="og: http://ogp.me/ns#" property="og:image:width" content="460" >
-    <meta prefix="og: http://ogp.me/ns#" property="og:image:height" content="460" >
-    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/68981163?" >
-    <meta name="twitter:card" content="summary">
-    <meta name="author" content="Danilo Ribeiro">
-    <meta name="keywords" content="frontend,front-end,development,developer,vue,vue.js,react,javascript,typescript,ui,ux,design">
-	
-	  <link rel="mask-icon" href="/favicon.ico" color="grey">
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="/manifest.json"
+    />
+    <meta
+      name="msapplication-TileColor"
+      content="#ffffff"
+    />
+    <meta
+      name="msapplication-TileImage"
+      content="/ms-icon-144x144.png"
+    />
+
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:title"
+      content="Danilo Ribeiro - Front-End Developer"
+    />
+    <meta
+      name="twitter:title"
+      content="Danilo Ribeiro - Front-End Developer"
+    />
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:description"
+      content="Front-End Developer - Vue.js + React + Next.js + TypeScript + UI/UX"
+    />
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:type"
+      content="website"
+    />
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:image"
+      content="https://avatars.githubusercontent.com/u/68981163?"
+    />
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:image:width"
+      content="460"
+    />
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:image:height"
+      content="460"
+    />
+    <meta
+      name="twitter:image"
+      content="https://avatars.githubusercontent.com/u/68981163?"
+    />
+    <meta
+      name="twitter:card"
+      content="summary"
+    />
+    <meta
+      name="author"
+      content="Danilo Ribeiro"
+    />
+    <meta
+      name="keywords"
+      content="frontend,front-end,development,developer,vue,vue.js,react,javascript,typescript,ui,ux,design"
+    />
+
+    <link
+      rel="mask-icon"
+      href="/favicon.ico"
+      color="grey"
+    />
     <title>Danilo Ribeiro</title>
   </head>
   <body class="custom-scrollbar bg-white dark:bg-zinc-800">
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script
+      type="module"
+      src="/src/main.ts"
+    ></script>
   </body>
 </html>
