feat: redesign and update info

--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
     />
     <title>Danilo Ribeiro</title>
   </head>
-  <body class="custom-scrollbar bg-white dark:bg-zinc-800">
+  <body
+    class="custom-scrollbar bg-white transition-all duration-200 dark:bg-zinc-800"
+  >
     <div id="app"></div>
     <script
       type="module"
